@@ -16,7 +16,8 @@ Features and improvements:
   timestamp issues seen with previous Score-P versions.
 - The OMPT adapter has these new features: improved support for OpenMP
   tasks, including detach, yield, taskwait depend, taskloops and
-  cancelled tasks. Support for OpenMP reduction clauses.
+  cancelled tasks. Support for OpenMP reduction clauses. Support for
+  implementation-based barriers generated by the OpenMP runtime.
 
 User tools and API improvements and changes:
 
